<resources>
    <string name="app_name">Signaturepad</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="signaturepad_samples">SignaturePad Samples</string>
    <string name="theme_menu">Theme menu</string>
    <string name="theme_follow_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="compose_sample">Compose</string>
    <string name="view_sample">View</string>
    <string name="databinding_sample">databind</string>
    <string name="save_restore_sample">SaveRestoreActivity</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="clear">Clear</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="undo">Undo</string>
    <string name="save_signature">Save Signature</string>
    <string name="pen_color_label">Pen color:</string>
    <string name="shadow_color_label">Shadow color:</string>
    <string name="image_background_color_label">Image background color:</string>
    <string name="image_pen_color_label">Image pen color:</string>
    <string name="pen_min_width_format">Pen min width: %1$.1f dp</string>
    <string name="pen_max_width_format">Pen max width: %1$.1f dp</string>
    <string name="shadow_intensity">Shadow intensity</string>
    <string name="shadow_intensity_format">Shadow intensity: %1$.2f</string>
    <string name="shadow_angle">Shadow angle</string>
    <string name="shadow_angle_format">Shadow angle: %1$.0f deg</string>
    <string name="use_override_colors">Use override colors</string>
    <string name="bitmap">Bitmap</string>
    <string name="transparent_bitmap">Transparent Bitmap</string>
    <string name="signature">Signature</string>
    <string name="transparent">Transparent</string>
    <string name="svg_label">SVG:</string>
    <string name="signature_data_format">Signature data: %1$s</string>
    <string name="on_clear">OnClear</string>
    <string name="color_red">Red</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
</resources>
