<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:signature="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="binding"
            type="se.warting.signaturecore.utils.SignedListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ViewActivity">


        <RelativeLayout
            android:id="@+id/signature_pad_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/shadow_controls_container">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/signature_pad_description"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/agreement"
                android:textColor="@android:color/darker_gray" />

            <se.warting.signatureview.views.SignaturePad
                android:id="@+id/signature_pad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bind:onClear="@{binding::onClear}"
                bind:onSigned="@{binding::onSigned}"
                bind:onStartSigning="@{binding::onStartSigning}"
                signature:clearOnDoubleClick="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/shadow_controls_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons_container"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/shadow_intensity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shadow_intensity"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/shadow_intensity_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/shadow_angle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shadow_angle"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/shadow_angle_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="360"
                android:progress="51" />

            <LinearLayout
                android:id="@+id/shadow_color_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shadow_black_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_black" />

                <Button
                    android:id="@+id/shadow_blue_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_blue" />

                <Button
                    android:id="@+id/shadow_red_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_red" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/clear_pad" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/save_signature" />
        </LinearLayout>

    </RelativeLayout>
</layout>
